[project]
name = "fmtm-splitter"
dynamic = ["version"]
description = "A program for splitting a large AOI into smaller tasks."
authors = [
    {name = "Rob Savoye", email = "rob.savoye@hotosm.org"},
    {name = "Sam Woodcock", email = "sam.woodcock@hotosm.org"},
]
dependencies = [
    "codetiming>=1.4.0",
    "epdb>=0.15.1",
    "geodex>=0.1.2",
    "geojson>=2.5.0",
    "progress>=1.6",
    "shapely>=1.8.5",
    "mkdocstrings-python>=1.3.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = "GPL-3.0-only"
keywords = ["fmtm", "odk", "hot"]
classifiers = [
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
homepage = "https://github.com/hotosm/fmtm-splitter/wiki"
documentation = "https://hotosm.github.io/fmtm-splitter"
repository = "https://github.com/hotosm/fmtm-splitter"

[build-system]
requires = ["pdm-pep517>=1.1.4"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
addopts = "-ra -q -p no:warnings"
testpaths = [
    "tests",
]
pythonpath = "fmtm_splitter"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version",
    "fmtm_splitter/__version__.py",
]

[tool.pdm]
version = {from = "fmtm_splitter/__version__.py"}
[tool.pdm.build]
includes = ["fmtm_splitter"]
source-includes = ["tests", "LICENSE.md", "README.md"]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
    "commitizen>=3.6.0",
    "pre-commit>=3.3.3",
]
test = [
    "pytest>=7.4.0",
]
docs = [
    "mkdocs>=1.5.2",
    "mkdocs-material>=9.1.21",
    "mkdocstrings-python>=1.4.0",
    "mkdocs-exclude>=1.0.2",
    "black>=23.7.0",
]

[tool.black]
line-length = 132
target-version = "py310"

[tool.ruff]
fix = true
line-length = 132
target-version = "py310"
select = ["I", "E", "W", "D", "B", "F", "N", "Q"]
ignore = ["N805", "B008"]
exclude = [
    ".git",
    ".ruff_cache",
    ".vscode",
    "__pypackages__",
    "build",
    "dist",
    "fmtm_splitter/__version__.py",
]
[tool.ruff.pydocstyle]
convention = "google"

[project.scripts]
fmtm-splitter = "fmtm_splitter.splitter:main"
