[project]
name = "fmtm-splitter"
version = "2.0.0"
description = "A utility for splitting an AOI into multiple tasks."
authors = [
    {name = "Ivan Gayton", email = "ivan.gayton@hotosm.org"},
    {name = "Rob Savoye", email = "rob.savoye@hotosm.org"},
    {name = "Sam Woodcock", email = "sam.woodcock@hotosm.org"},
    {name = "Sujan Adhikari", email = "adhikarisujan.naxa@gmail.com"},   
]
dependencies = [
    "geojson>=2.5.0",
    "shapely>=1.8.1",
    "psycopg2>=2.9.1",
    "numpy>=1.21.0",
    "osm-rawdata>=0.2.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = "GPL-3.0-only"
keywords = ["fmtm", "aoi", "split", "postgis", "hot"]
classifiers = [
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[dependency-groups]
dev = [
    "commitizen>=3.6.0",
    "pre-commit>=3.3.3",
]
debug = [
    "debugpy>=1.6.7.post1",
    "ipdb>=0.13.13",
    "epdb>=0.15.1",
    "codetiming>=1.4.0",
]
test = [
    "pytest>=7.4.0",
]
docs = [
    "mkdocs>=1.5.2",
    "mkdocs-material>=9.2.3",
    "mkdocstrings-python>=1.5.2",
    "mkdocs-exclude>=1.0.2",
]
api = [
    "brotli==1.1.0",
    "geojson-pydantic==1.1.2",
    "litestar==2.13.0",
    "uvicorn==0.34.0",
]

[project.urls]
homepage = "https://hotosm.github.io/fmtm-splitter"
documentation = "https://hotosm.github.io/fmtm-splitter"
repository = "https://github.com/hotosm/fmtm-splitter"

[tool.pytest.ini_options]
addopts = "-ra -q -p no:warnings"
testpaths = [
    "tests",
]
pythonpath = "fmtm_splitter"

[tool.commitizen]
name = "cz_conventional_commits"
version = "2.0.0"
version_files = [
    "pyproject.toml:version",
    "fmtm_splitter/__version__.py",
    "Makefile:VERSION",
]
update_changelog_on_bump = true

[tool.ruff]
fix = true
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    ".ruff_cache",
    ".vscode",
    "__pypackages__",
    "build",
    "dist",
    "fmtm_splitter/__version__.py",
]
[tool.ruff.lint]
select = ["I", "E", "W", "D", "B", "F", "N", "Q"]
ignore = ["N805", "B008"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.sqlfluff.core]
dialect = "postgres"
templater = "placeholder"
[tool.sqlfluff.templater.placeholder]
param_style = "pyformat"  # For pyformat SQL %(num_buildings)s
